# wildcard

./: .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_initial_jobs.py  0002_seed_mock_users.py  0003_job_criteria_and_embeddings.py  0004_job_templates.py  0005_resume_uploads.py  0006_duplicate_flags.py  0007_applicant_name_on_upload.py  0008_parsing_errors.py  0009_candidate_notes_tags.py  0010_candidate_documents.py  0011_candidate_job_embeddings.py  0012_fit_scores.py  0013_score_recalculation_jobs.py  0014_fit_score_overrides.py  0015_multi_dim_scores.py  0016_shortlist.py  0017_shortlist_feedback_nearmiss.py  0018_auth_rbac.py  0019_pipeline_stages.py  0020_conversation_sessions.py  0021_chat_pending_action.py  0022_fix_seed_user_passwords.py  0023_interview_kits.py  0024_interview_kit_rubrics_sharing.py  0025_admin_panel.py  0026_notifications.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  candidate.py  job.py  pipeline.py  template.py  user.py
apps/api/app/schemas/: criteria.py  job.py  resume.py  template.py
apps/api/app/services/: __init__.py  auth_service.py  chat_service.py  criteria_service.py  duplicate_service.py  email_service.py  embedding_service.py  fit_score_service.py  (+14 more)
apps/api/scripts/: backfill_embeddings.py  seed_suggestions.py
apps/api/tests/: conftest.py  test_criteria_extraction.py  test_job_state_machine.py  test_jobs_api.py
(+197 files in other folders)
