[tool.poetry]
name = "hiring-platform-api"
version = "0.1.0"
description = "AI-Driven Hiring Intelligence Platform - Backend API"
authors = ["Engineering Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
pgvector = "^0.3.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
boto3 = "^1.34.0"
tenacity = "^8.3.0"
greenlet = "^3.3.2"
pymupdf = "^1.27.0"
python-docx = "^1.2.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:sqlalchemy"]

[tool.ruff]
line-length = 100
